--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -21,7 +21,7 @@ jobs:
     - name: Run local build
       run: |
         npm install --global yarn
-        npm install -g @subql/cli@3.3.0
+        npm install -g @subql/cli
         yarn install
         subql codegen
         CI=false subql build
