--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -46,4 +46,4 @@ jobs:
     - name: Redeploy on aws
       run: |
         aws eks update-kubeconfig --region  ap-southeast-1 --name ${{ secrets.EKS_CLUSTER }}
-        kubectl rollout restart deploy cosmwasm-starter -n webapp
+        kubectl rollout restart deploy aez-indexer -n webapp
